# rust-opentelemetry-auto-span

./: Cargo.toml  LICENSE  README.md
examples/: compose.yaml
examples/actix-web-jaeger/: Cargo.toml  README.md  compose.yaml  docker-compose.yaml  sample.sql
examples/actix-web-jaeger/src/: main.rs
examples/axum-jaeger/: Cargo.toml  README.md
examples/axum-jaeger/src/: main.rs
otel-test-helper/: Cargo.toml
otel-test-helper/src/: provider.rs  span.rs  tracer.rs
src/: attr_options.rs  dig.rs  handle_reqwest.rs  handle_sqlx.rs  lib.rs  line.rs  utils.rs
tests/: 01-parse-fn.rs  actix-sqlx.rs  opts.rs  parse-just-fn.rs  progress.rs  test_span.rs
tracing-test/: Cargo.toml
tracing-test/src/: lib.rs  provider.rs  span.rs
