[workspace]
members = [
    ".",
    "tracing-test",
    "examples/actix-web-jaeger",
]

[package]
name = "opentelemetry-auto-span"
version = "0.1.0"
edition = "2021"
autotests = false
license = "Apache-2.0"
description = "A helper library for opentelemetry tracing"
repository = "https://github.com/hinohi/rust-opentelemetry-auto-span"
readme = "README.md"
keywords = ["opentelemetry", "logging", "tracing"]
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits", "visit-mut", "visit"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
regex = "1"

[dev-dependencies]
opentelemetry = { version = "0.17", default-features = false, features = ["trace"] }

tracing-test = { path = "tracing-test" }
opentelemetry-auto-span = { path = "." }

[[test]]
name = "test_span"
path = "tests/test_span.rs"
