[package]
name = "actix-web-jaeger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.41", features = ["full"] }
actix-web = "4.9"
awc = { version = "3.5", default-features = false }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql"] }
thiserror = "1.0"

opentelemetry = { version = "0.26", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.26"
actix-web-opentelemetry = "0.19.0"

opentelemetry-auto-span = { path = "../.." }
