[package]
name = "axum-jaeger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.41", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio-rustls", "mysql"] }
thiserror = "1.0"

opentelemetry = { version = "0.26", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.26"

opentelemetry-auto-span = { path = "../.." }
